# dbt-taskfile-demo

./: .gitignore  LICENSE  README.md  Taskfile.yaml  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json  make_tables.sql  post-create.sh  post-start.sh
dbt/: Taskfile.yaml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
