[tool.poetry]
name = "dbt-taskfile-demo"
version = "0.1.0"
description = "A minimal dbt repo to showcase Taskfile automations"
authors = ["wtfzambo <zambelli.federico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
harlequin = "^1.13.0"
dbt-core = "^1.7.7"
dbt-duckdb = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
